# hasql-effectful

./: .gitignore  CHANGELOG.md  Justfile  LICENSE  README.md  cabal.project  flake.nix  hasql-effectful.cabal  process-compose.yaml
examples/: Main.hs
src/Effectful/: Hasql.hs
