cabal-version:   3.4
name:            hasql-effectful
version:         0.1.0.0
synopsis:        Effectful bindings for hasql

-- description:
homepage:        https://github.com/shinzui/hasql-effectful
license:         MIT
license-file:    LICENSE
author:          Nadeem Bitar
maintainer:      nadeem@gmail.com

-- copyright:
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:             warnings
  exposed-modules:    Effectful.Hasql

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base       ^>=4.18.0.0
    , effectful  ^>=2.2.2
    , hasql      ^>=1.6
    , hasql-pool ^>= 0.10

  hs-source-dirs:     src
  default-language:   GHC2021
  default-extensions:
    DerivingStrategies
    DataKinds
    LambdaCase
    TypeFamilies

executable hasql-effectful
  import:           warnings
  main-is:          Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base             ^>=4.18.0.0
    , hasql-effectful

  hs-source-dirs:   examples
  default-language: GHC2021

test-suite hasql-effectful-test
  import:           warnings
  default-language: GHC2021

  -- other-modules:
  -- other-extensions:
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base             ^>=4.18.0.0
    , hasql-effectful
