cabal-version:   3.4
name:            hasql-effectful
version:         0.1.0.0
synopsis:        Effectful bindings for hasql

-- description:
homepage:        https://github.com/shinzui/hasql-effectful
license:         MIT
license-file:    LICENSE
author:          Nadeem Bitar
maintainer:      nadeem@gmail.com

build-type:      Simple
extra-doc-files: CHANGELOG.md

common common
  ghc-options: -Wall
  default-extensions:
    DerivingStrategies
    DataKinds
    LambdaCase
    TypeFamilies

library
  import:             common
  exposed-modules:    Effectful.Hasql

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base       ^>=4.17
    , effectful  
    , hasql      ^>=1.6
    , hasql-pool ^>= 0.10

  hs-source-dirs:     src
  default-language:   GHC2021

executable hasql-effectful-example
  import:           common
  main-is:          Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base             ^>=4.17
    , hasql-effectful
    , hasql
    , hasql-pool
    , hasql-transaction
    , text
    , effectful

  hs-source-dirs:   examples
  default-language: GHC2021

test-suite hasql-effectful-test
  import:           common
  default-language: GHC2021

  -- other-modules:
  -- other-extensions:
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base             ^>=4.17
    , hasql-effectful
